[gd_scene load_steps=2 format=2]

[ext_resource path="res://Boss/StaticPatterns/nWayBurst.gd" type="Script" id=1]

[node name="nWayBurst" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[node name="KillTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
